# wlr-layout-ui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  done.rst  justfile  pyproject.toml  run.py  tickets.rst  tox.ini
.github/workflows/: archlinux.yml  install.yml
files/: wlr-layout-ui.desktop
pyggets_demo/: demo.py  demo_toml.py  simple_demo.py  simple_demo.toml  simple_demo_toml.py
pyggets_demo/demo_pages/: button.toml  checkbox.toml  containers.toml  dropdown.toml  filedialog.toml  image.toml  label.toml  loader.toml  modal.toml  panel.toml  progressbar.toml  radiogroup.toml  scrollbox.toml  separator.toml  slider.toml  spacer.toml  textinput.toml  toggle.toml  tooltip.toml
scripts/: rasterize_icons.sh
src/pyggets/: __init__.py  color.py  containers.py  filedialog.py  geometry.py  loader.py  primitives.py  shapes.py  style.py  theme.py  widgets.py
src/wlr-layout-ui/: __init__.py  base.py
src/wlr_layout_ui/: __init__.py  app.py  base.py  custom_types.py  displaywidget.py  factories.py  gui.py  gui_utils.py  guibase.py  layoutmode.py  profiles.py  screens.py  screenshots.py  settings.py  settingsmode.py  shapes.py  types.py  utils.py  widgets.py
src/wlr_layout_ui/icons/: __init__.py  _icons.py
tests/: test_box_alignment.py  test_monitor_alignment.py  test_snap.py
