[tool.poetry]
name = "wlr-layout-ui"
version = "1.6.10"
description = "A tiny GUI to configure screen layouts on wayland"
authors = ["fdev31 <fdev31@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/fdev31/wlr-layout-ui"
packages = [{include = "wlr_layout_ui", from = "src"}]
license = "MIT"

[tool.poetry.scripts]
wlrlui = 'wlr_layout_ui:main'

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^2.0.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
vulture = "^2.7"
pydantic = "^1.10.7"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
preview = true

exclude = ["*_v?.py", "tests", "scripts", "sample_extension", ".git"]


[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["E203", "D107", "D105"]
select = [
    # pycodestyle
    "E",
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "W"
]
[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
